--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "attolink": {
@@ -17,6 +17,12 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules/",
+                "src/styles"
+              ]
+            },
             "outputPath": "dist/attolink",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -123,6 +129,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "attolink"
+    }
+  },
+  "defaultProject": "attolink",
+  "cli": {
+    "analytics": "cbf5759c-e523-47f5-b938-0856e1950caf"
+  }
 }
