--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "attolink",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -11,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-mdc/web": "^5.0.5",
     "@angular/animations": "~9.0.2",
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
@@ -23,6 +25,7 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
+  
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.3",
     "@angular/cli": "~9.0.3",
