--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "ngx-cookie-service": "^3.0.4",
     "ngx-stripe": "^9.0.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
