--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-cookie-service": "^3.0.4",
     "ngx-stripe": "^9.0.2",
     "rxjs": "~6.5.4",
+    "subsink": "^1.0.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
