--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@material/typography": "^5.1.0",
     "moment": "^2.25.3",
     "ngx-cookie-service": "^3.0.4",
+    "ngx-skeleton-loader": "^2.0.0",
     "ngx-stripe": "^9.0.2",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
