--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.0.7",
     "@material/ripple": "^5.1.0",
     "@material/typography": "^5.1.0",
+    "json-beautify": "^1.1.1",
     "moment": "^2.25.3",
     "ngx-cookie-service": "^3.0.4",
     "ngx-skeleton-loader": "^2.0.0",
