--- a/angular.json
+++ b/angular.json
@@ -31,13 +31,32 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/app/content"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/prism-themes/themes/prism-vsc-dark-plus.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/lib/marked.js",
+              "node_modules/prismjs/prism.js",
+              "./node_modules/prismjs/components/prism-javascript.min.js",
+              "./node_modules/prismjs/components/prism-javascript.js",
+              "./node_modules/prismjs/components/prism-python.js",
+              "node_modules/prismjs/plugins/line-highlight/prism-line-highlight.js",
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js",
+              "./node_modules/prismjs/components/prism-python.min.js",
+              "./node_modules/prismjs/components/prism-bash.min.js",
+              "./node_modules/prismjs/components/prism-json.min.js",
+              "./node_modules/prismjs/components/prism-json.js",
+
+              "./node_modules/prismjs/components/prism-bash.js",
+              "node_modules/prismjs/plugins/highlight-keywords/prism-highlight-keywords.min.js"
+
+
+            ]
           },
           "configurations": {
             "production": {
