--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "json-beautify": "^1.1.1",
     "moment": "^2.25.3",
     "ngx-cookie-service": "^3.0.4",
+    "ngx-markdown": "^9.1.1",
+    "ngx-monaco-editor": "^9.0.0",
     "ngx-skeleton-loader": "^2.0.0",
     "ngx-stripe": "^9.0.2",
+    "prism-themes": "^1.4.0",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
     "tslib": "^1.10.0",
